k8s/base/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memory-backend
  namespace: memory-game
spec:
  replicas: 2     # wymagane 2 repliki
  selector:
    matchLabels:
      app: memory-backend
  template:
    metadata:
      labels:
        app: memory-backend
    spec:
      # kontenery działają jako non-root
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
        
      # initContainer czeka na bazę danych przed startem backendu
      containers:
        - name: backend-container
          image: memory-backend:v2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          
          # sondy żywotności (używamy bezpiecznego sprawdzenia portu TCP)
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20

          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "600m"
