k8s/base/database-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: memory-db
  namespace: memory-game
spec:
  serviceName: "memory-db-service"
  replicas: 1
  selector:
    matchLabels:
      app: memory-db
  template:
    metadata:
      labels:
        app: memory-db
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
              name: dbport
          volumeMounts:
            - name: db-storage
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: db-storage
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 256Mi
