k8s/base/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memory-frontend
  namespace: memory-game
  labels:
    app: memory-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memory-frontend
  template:
    metadata:
      labels:
        app: memory-frontend
    spec:
      containers:
        - name: frontend-container
          image: memory-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          # sondy
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
