k8s/base/logto-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: logto-service
spec:
  selector:
    app: logto-app
  ports:
    - name: core
      port: 3001
      targetPort: 3001
    - name: admin
      port: 3002
      targetPort: 3002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logto-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logto-app
  template:
    metadata:
      labels:
        app: logto-app
    spec:
      containers:
        - name: logto
          image: ghcr.io/logto-io/logto:latest
          command: ["sh", "-c", "npm start"]
          ports:
            - containerPort: 3001
            - containerPort: 3002
