k8s/base/logto-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: logto-db-service
spec:
  selector:
    app: logto-db
  ports:
    - port: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: logto-db
spec:
  serviceName: "logto-db-service"
  replicas: 1
  selector:
    matchLabels:
      app: logto-db
  template:
    metadata:
      labels:
        app: logto-db
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: logto-db-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: logto-db-data
          persistentVolumeClaim:
            claimName: logto-db-pvc
