k8s/base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: memory-frontend-service
  namespace: memory-game
spec:
  selector:
    app: memory-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: memory-backend-service
  namespace: memory-game
spec:
  selector:
    app: memory-backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: memory-mqtt-service
  namespace: memory-game
spec:
  selector:
    app: memory-mqtt
  ports:
    - name: mqtt
      protocol: TCP
      port: 1883       # standardowy port dla protokołu MQTT
      targetPort: 1883
    - name: websocket
      protocol: TCP
      port: 9001       # port MQTT po WebSockets
      targetPort: 9001
