k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: memory-game-ingress
  namespace: memory-game
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    # sticky session dla socket.io, dla 2 replik
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /()(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: memory-frontend-service
                port:
                  number: 80

          # zapytania HTTP CRUD - przekieruj ruch do Backend API
          - path: /api(/(.*))
            pathType: ImplementationSpecific
            backend:
              service:
                name: memory-backend-service
                port:
                  number: 3000

          # synchronizacja pokoi i rozgrywki (Socket.io / WebSockets)
          - path: /socket.io(/(.*))
            pathType: ImplementationSpecific
            backend:
              service:
                name: memory-backend-service
                port:
                  number: 3000
